# aiida-environ

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.json
aiida_environ/: __init__.py
aiida_environ/calculations/: adsorbate_calc.py  adsorbate_calc2.py  adsorbate_gen.py  adsorbate_vec.py  compareF.py  energy_differentiate.py  finite.py  partial.py  pw.py
aiida_environ/calculations/adsorbate/: gen_multitype.py  gen_supercell.py  post_supercell.py
aiida_environ/data/: charge.py  dielectric.py
aiida_environ/mn_data_extraction/: Minnesota_Solvation_Database.csv  extraction.py  loop.sh  node_assignment.py  pk_vals.json  pworkchain.py  query.py  reset.sh  wc_test.py
aiida_environ/mn_data_extraction/all_solutes/: 0001met.xyz.bz2  0002eth.xyz.bz2  0003pro.xyz.bz2  0004nbu.xyz.bz2  0005npe.xyz.bz2  0006nhe.xyz.bz2  0007nhe.xyz.bz2  0008noc.xyz.bz2  0009nhe.xyz.bz2  0010met.xyz.bz2  0011dim.xyz.bz2  0012met.xyz.bz2  0013dim.xyz.bz2  0014tri.xyz.bz2  0016cyc.xyz.bz2  0017cyc.xyz.bz2  0018cyc.xyz.bz2  0019met.xyz.bz2  0020cis.xyz.bz2  0021eth.xyz.bz2  0022pro.xyz.bz2  0023str.xyz.bz2  0024met.xyz.bz2  0025buta.xyz.bz2  0026cyc.xyz.bz2  0027pen.xyz.bz2  0028Epe.xyz.bz2  0029hex.xyz.bz2  0030eth.xyz.bz2  0031pro.xyz.bz2  0032but.xyz.bz2  0033pen.xyz.bz2  0034hex.xyz.bz2  0035ben.xyz.bz2  0036tol.xyz.bz2  0037eth.xyz.bz2  0038oxy.xyz.bz2  0039mxy.xyz.bz2  0040pxy.xyz.bz2  0041nap.xyz.bz2  (+750 more)
aiida_environ/parsers/: pw.py
aiida_environ/tests/: adsorbate_test.py  test1.py  test2.py  test_adsorbate_calc.py
aiida_environ/utils/: adsorbate_graph.py  charge.py  environ.py  graph.py  merge.py  occupancy.py  validate.py  vector.py
examples/: NEUTRAL_017.in  ex_debug_parser.py  ex_debug_parser_0.py  ex_debug_parser_1.py  ex_environ_adsorbate.py  ex_environ_calc.py  ex_environ_compare_force.py  ex_environ_force_test.py  ex_environ_grandcanonical.py  ex_environ_grandpotential.py  ex_environ_graphml.py  ex_environ_local.py  ex_environ_phonon.py  ex_environ_relax.py  ex_environ_relax_phonon.py  ex_environ_remote.py  ex_environ_solvation.py  ex_external_charges.py  ex_finite_difference_calc.py  ex_finite_force_calc.py  ex_gp_single.py  make_inputs.py  node_assignment.py  pk_vals.json  reset.sh
tests/: conftest.py  test_adsorbate_gen_multitype.py  test_adsorbate_gen_supercell.py  test_adsorbate_vec.py  test_utils_vector.py
tests/calculations/: test_adsorbate_gen_multitype.py
tests/utils/: test_merge.py
(+49 files in other folders)
